# TFM_JUAN

./: CLAUDE.md  PROGRESO.md  README.md  package.xml  setup.py  sync_nuc.sh
.claude/: settings.json
.claude/hooks/: session_start_context.sh
docs/: 01_introduccion.md  02_arquitectura.md  03_herramientas_ia.md  04_diario_desarrollo.md  05_decisiones.md  05_estado_del_arte.md  06_implementacion.md  07_resultados.md  decisiones.md  prompt_proxima_sesion.md  sesion_siguiente.md
legacy_previo/: README.md
maps/: mapa_laboratorio.pgm  mapa_laboratorio.yaml
person_follower/collision_handling_node/: collision_handling_node.py
person_follower/config/: config.yaml  kobuki_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml
person_follower/control_node/: control_node.py
person_follower/detection_node/: detection_node.py
person_follower/launch/: bringup_full.launch.py  nav2_localization_demo.launch.py  slam_toolbox.launch.py
person_follower/tracking_node/: tracking_node.py
person_follower/user_interface_node/: user_interface_node.py
person_follower/visual_detection_node/: visual_detection_node.py
scripts/: continue_session.sh  launch_robot.bash  nav2_send_goal.py
validation/: .gitignore  README.md  bag_to_csv.py  plot_run.py  record_run.sh  test_nomotion.launch.py  verify_fusion_confirm.py  verify_single_leg_fallback.py
validation/runs/20260713_near_gain_analysis/: cmd_vel.csv  detection.csv  expected_position.csv  fsm_states.csv  gestures.csv  metrics.txt  odom.csv  odom.tum  position.csv  telemetry.csv
validation/runs/20260713_near_gain_v2_analysis/: cmd_vel.csv  detection.csv  expected_position.csv  fsm_states.csv  metrics.txt  odom.csv  odom.tum  position.csv  telemetry.csv
validation/runs/20260713_pifix_movimiento_analysis/: cmd_vel.csv  detection.csv  expected_position.csv  fsm_states.csv  (+6 more)
(+358 files in other folders)
